# ChatSphere

./: Overview.md  README.md  docker-compose.yml
backend/: .dockerignore  .env  Docker-Compose.yml  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  sio.py
backend/app/models/: __init__.py  chat.py  message.py  user.py
backend/app/routes/: __init__.py  auth.py  chats.py  messages.py  users.py
backend/app/services/: chat_service.py  message_service.py  redis_service.py  user_service.py
backend/app/utils/: helpers.py  jwt.py  security.py
frontend/: Docker-Compose.yml  Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: axios.js  chatApi.js
frontend/src/components/: ChatWindow.jsx  Message.jsx  Sidebar.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Chat.jsx  Login.jsx
frontend/src/socket/: socket.js
frontend/src/utils/: token.js
